# dexscreener-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  DEBUG_GUIDE.md  LICENSE  README.md  cursor_config_test.json  cursor_test.py  debug_cursor.py  mcp_stdio_test.py  package.json  pyproject.toml  standalone_install.py  test_mcp_client.py  test_tools.py  tsconfig.json  windows_cursor_config.json  windows_cursor_config_fullpath.json
dexscreener_mcp/: __init__.py  client.py  server.py  types.py
tests/: test_client.py
